# samdash

./: .coveragerc  .env.template  .gitignore  DEPLOY_INSTRUCTIONS.MD  Dockerfile  Procfile  README.md  conftest.py  deploy.sh  docker-compose.yml  main.py  package.json  pyproject.toml  science.ipynb  send_deploy_webhook.sh  todo.md  vitest.config.js
authentication/: backends.py  urls.py  views.py
authentication/tests/: test_auth.py
config/: schema.py  settings.py  test_settings.py  urls.py  wsgi.py
dashboard/: admin.py  models.py  schema.py  urls.py  utils.py  views.py
dashboard/api/: serializers.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
dashboard/models/: __init__.py  dashboard_widget.py  keyboard_shortcut.py
dashboard/static/css/: dashboard.css
dashboard/static/js/: dashboard.js  graphql-client.js  registry.js  shortcuts.js
dashboard/static/js/__tests__/: chart_widgets.test.js  dashboard.test.js  registry.test.js  rss_widget.test.js  shortcuts.test.js
dashboard/static/js/widgets/dow_gold_ratio/: widget.js
dashboard/static/js/widgets/gold_price/: widget.js
dashboard/static/js/widgets/oil_price/: widget.js
dashboard/static/js/widgets/rss_feed/: widget.js
dashboard/static/js/widgets/silver_price/: widget.js
dashboard/static/js/widgets/treasury_10y/: widget.js
dashboard/tests/: test_api.py  test_models.py
rss/: admin.py  models.py  schema.py
rss/api/: serializers.py  urls.py  views.py
rss/management/commands/: fetch_feeds.py
rss/migrations/: 0001_initial.py
rss/models/: __init__.py  rss_entry.py  rss_feed.py
rss/tests/: test_models.py
src/: config.py  fetcher.py  hist_fetcher.py  main.py  price_fetcher.py
src/data_sources/: investingdotcom.py  kitco.py  yfinance.py
src/data_sources/utils/: caching.py  plotting.py
templates/authentication/: login.html
templates/dashboard/: base.html  dashboard.html
tests/dashboard/: test_api.py  test_dashboard_widget.py  test_graphql.py  test_keyboard_shortcut.py
tests/rss/: test_api.py  test_fetch_feeds.py  test_graphql.py  test_rss_entry.py  test_rss_feed.py
