[tool.poetry]
name = "Samdash"
version = "0.1.0"
description = "My personal dashboard."
authors = ["Samuel Morris <dodobird181@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
streamlit = "^1.55.0"
bs4 = "^0.0.2"
yfinance = "^1.2.0"
plotly = "^6.6.0"
nbformat = "^5.10.4"
mplfinance = "^0.12.10b0"
redis = "^7.3.0"

[tool.poetry.group.dev.dependencies]
honcho = "^2.0.0"
pytest = "^8.3"
pytest-django = "^4.9"
coverage = "^7.6"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "database.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
